--- a/unstable/libp2p/signed_envelope.html
+++ b/unstable/libp2p/signed_envelope.html
@@ -271,6 +271,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="payload(env: Envelope): seq[byte]">payload(env: Envelope): seq[byte]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">write
+      <li><a class="reference" href="#write%2CProtoBuffer%2Cint%2CEnvelope"
+    title="write(pb: var ProtoBuffer; field: int; env: Envelope): Result[void, CryptoError]">write(pb: var ProtoBuffer; field: int; env: Envelope): Result[void, CryptoError]</a></li>
+
+  </ul>
 
   </ul>
 </li>
@@ -342,9 +347,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L123"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L131"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L123" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L131" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -373,9 +378,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L150"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L158"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L150" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L158" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -399,9 +404,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L168"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L176"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L168" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L176" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -425,9 +430,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L140"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L148"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L140" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L148" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -452,9 +457,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L128"
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L136"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L128" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L136" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -467,6 +472,19 @@ class="link-seesrc" target="_blank">Source</a>
 href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L102"
 class="link-seesrc" target="_blank">Source</a>
 &nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L102" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
+<div id="write,ProtoBuffer,int,Envelope" class="tohide">
+<dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CEnvelope"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">env</span><span class="Other">:</span> <a href="signed_envelope.html#Envelope"><span class="Identifier">Envelope</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Result</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">,</span>
+    <a href="crypto/crypto.html#CryptoError"><span class="Identifier">CryptoError</span></a><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/unstable/libp2p/signed_envelope.nim#L122"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/signed_envelope.nim#L122" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -485,7 +503,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-07-27 17:16:35 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-08-01 14:42:46 UTC</small>
       </div>
     </div>
   </div>
